     2v04 : Allow \1..\9 escape codes in RegExp
            ESP8266: reading storage is not working for boot from user2 (fix #1507)
            Fix Array.fill crash if used to fill up all available memory (fix #1668)
            Fix NRF.requestDevice regression (clearInterval error) (fix #1669)
            Smartibot devices now advertise on BLE as 'Smartibot abcd'
            nRF5x: Leave digital input disconnected for analog read (saves power)
            nRF5x: Return 'analog' as pin mode for any pin where input is disconnected
            If watchdog is on and automatic, ensure that `reset()` keeps the automatic kicking going
            Ensure that a console stays locked even after 
            Ensure interpreter flags (eg echo) are cleared after a `reset()`
            nRF5x: When watchdog is on and automatic, automatically wake up often enough to service it
            Fix Graphics.setFontBitmap on builds with no vector font (fix #1671)
            Graphics.asBMP now takes account of bitmap rotation (fix #1672)
            Raspberry pi pin numbering the same if using wiringPi or filesystem GPIO (fix #1673)
            nRF52: Peer manager init errors from Nordic libs now not fatal 
            SDK15: Writing to flash now works
            nRF52840: USB Serial works even for big sends, and device swaps to USB automatically
            nRF52840: Allow Serial2 to be used
            ESP8266: optimize rename-section for ESP8266_4MB board, freeHeap +2064 byte (fix #1679)
            Fix corruption if Function.replaceWith called manually on something not a function (fix #1684)
            Fix bug where '.clone' on a native function didn't copy arguments (fix #1685)
            nRF52840: Fix input/pullup/pulldown pin modes on IO bank 2
            Added `E.memoryMap` to allow on-chip registers to be mapped direct to variables (fix #1500)

     2v03 : nRF5x: Fix issue when calling NRF.setAdvertising while connected via BLE (fix #1659)